Bug 60213 - UI: When undock Task Pane the right-click on Layouts not working well
Summary: UI: When undock Task Pane the right-click on Layouts not working well
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-03 05:01 UTC by Faisal Menawer
Modified: 2013-02-04 08:57 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Faisal Menawer 2013-02-03 05:01:42 UTC
the mouse Right-click on Layouts when task pane undock not working
well.

Steps to reproduce:
1. Open a new Empty Presentation.
2. undock the task pane.
3. right-click on any of the layouts.

Current behavior:

the context menu flashing and disappearing sometime.

Expected behavior:

the context menu appear under the mouse pointer.
Comment 1 Norbert Thiebaud 2013-02-04 06:21:50 UTC
replicated on MacOSX
Comment 2 Not Assigned 2013-02-04 06:28:16 UTC
Faisal M. Al-Otaibi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=35a45a4508ca4156ebaa4f17df776a971084160d

fdo#60213- fix the right-click misbehavior



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Norbert Thiebaud 2013-02-04 08:57:11 UTC
fixed on master by 35a45a4508ca4156ebaa4f17df776a971084160d