fdo#60213- fix the right-click misbehavior

Change-Id: Iea44c9e70efeb84482aefc70b311f1781241b030
Reviewed-on: https://gerrit.libreoffice.org/1971
Reviewed-by: Norbert Thiebaud <nthiebaud@gmail.com>
Tested-by: Norbert Thiebaud <nthiebaud@gmail.com>